crates/schema/tests/compile_fail/derive_emit_as_on_secret.stderr
error: `#[field(emit_as = ..)]` cannot be set on a secret field — a secret is never emitted on projection output, so an `emit_as` for it would never apply
 --> tests/compile_fail/derive_emit_as_on_secret.rs:7:5
  |
7 |     api_key: String,
  |     ^^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_emit_as_on_secret.rs:11:18
   |
 5 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
11 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
